feat: replace raw message onto error codes